--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
   <string name="app_name">Assignment4</string>
+    <string name="username">username</string>
+  <string name="password">password</string>
+  <string name="log_in">log in</string>
 </resources>
