--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="username">username</string>
   <string name="password">password</string>
   <string name="log_in">log in</string>
+    <string name="no_products_available">No Products Available</string>
 </resources>
